monitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: monitor-ingress
  namespace: monitoring-latest
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
